--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "mkdirp": "^0.5.1",
     "pug": "^2.0.4",
     "sass": "^1.22.7",
-    "terser": "^4.2.1"
+    "terser": "^4.2.1",
+    "node-watch": "^0.6.3"
   },
   "devDependencies": {
-    "node-watch": "^0.6.3"
   }
 }
